<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.localbusinessapp.MainActivity">



    <ImageView
        android:id="@+id/photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#ECF0F1"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/title_linear_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo_image_view"
        android:orientation="vertical"
        android:background="#2C3E50"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-light"
            android:text="@string/business_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/business_type" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar_linear_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_linear_view"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/website_linear_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/save_linear_view"
            android:padding="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/website_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/website" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/website_image_view"
                android:textColor="#2C3E50"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="Website" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/save_linear_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/save_linear_view"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/save_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/save" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/save_image_view"
                android:textColor="#2C3E50"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="Save" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lable_linear_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/lable_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lable" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lable_image_view"
                android:textColor="#2C3E50"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="Lable" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_liner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar_linear_view"
        android:paddingTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">


            <ImageView
                android:id="@+id/location_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:src="@drawable/location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2C3E50"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/business_address" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <ImageView
                android:id="@+id/location_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2C3E50"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/business_phone" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <ImageView
                android:id="@+id/location_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:src="@drawable/hour" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2C3E50"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/business_hour" />

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_liner_view"
        android:textColor="#2C3E50"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/business_info" />
</RelativeLayout>
